fix overflowing image

--- a/app/src/pages/styles/home.css
+++ b/app/src/pages/styles/home.css
@@ -259,6 +259,7 @@
 
 #list-mock {
     transition: all .6s;
+    width: 100% !important;
 }
 
 #list-mock:hover {
